--- a/index.html
+++ b/index.html
@@ -95,12 +95,12 @@
         "Hund.jpg",
         "Maus.jpg",
         "Elefant.jpg",
-        "Loewe.jpg",
-        "Kafer.jpg",
-        "Schildkroete.jpg",
+        "Löwe.jpg",
+        "Käfer.jpg",
+        "Schildkröte.jpg",
         "Hase.jpg",
         "Nashorn.jpg",
-        "Muecke.jpg"
+        "Mücke.jpg"
     ];
 
     let index = 0;
@@ -135,3 +135,4 @@
 
 </body>
 </html>
+
