--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
         "Bild 1.jpg",
         "Hund.jpg",
         "Bild 3.jpg",
-        "Bild 4.jpg",
+        "Bild Hinweis.jpg",
         "Löwe.jpg",
         "Käfer.jpg",
         "Bild 7.jpg",
@@ -260,3 +260,4 @@ Kleines Rätsel für euch, bevor ich’s verrate:
 
 </body>
 </html>
+
