--- a/index.html
+++ b/index.html
@@ -160,16 +160,16 @@
 
 <script>
     const bilder = [
-        "Bild 1.jpg",
-        "Hund.jpg",
+        "Bild Start.jpg",
+        "Bild Rom.jpg",
         "Bild 3.jpg",
         "Bild Hinweis.jpg",
-        "Löwe.jpg",
-        "Käfer.jpg",
-        "Bild 7.jpg",
-        "Hase.jpg",
-        "Nashorn.jpg",
-        "Mücke.jpg"
+        "Bild Silvester.jpg",
+        "Bild Paris.jpg",
+        "Bild Geburtstag.jpg",
+        "Bild Bio.jpg",
+        "Bild Berge.jpg",
+        "Bild Buch.jpg"
     ];
 
     const captions = [
@@ -260,4 +260,5 @@ Kleines Rätsel für euch, bevor ich’s verrate:
 
 </body>
 </html>
+
 
