--- a/index.html
+++ b/index.html
@@ -181,20 +181,53 @@ In den letzten Monaten ist so viel passiert – ich hätte niemals gedacht, dass
 Ich bin so dankbar für jede einzelne Person hier. Danke fürs Lachen, fürs Mitfiebern, fürs Inspirieren und dafür, dass ihr meine Welt jeden Tag ein bisschen bunter macht. 💕🌈
 
 Let’s keep growing, creating & having fun together! 🚀💫`,
-        "Fröhlicher Hund im Garten",
+        "Wenn Geschichte auf Sonnenbrille trifft 😎🏛️ Rom, du hast mein Herz.",
         "Wer braucht schon einen Wachhund, wenn man eine Abenteuer-Maus hat? 🐭💫",
         `Leute, ich war gestern im Escape Room und ich schwöre, mein Gehirn hat kurz gequalmt 😅🧠🔥
 	Wir mussten ein Rätsel lösen, bei dem man Zahlen in Buchstaben übersetzen musste. Ich hab euch die kleine Tabelle, die wir dafür 	benutzt haben, als Bild hochgeladen, falls ihr das mal selbst ausprobieren wollt. 🙌✨ Am Ende haben wir tatsächlich den Code 	geknackt und sind rechtzeitig rausgekommen.`,
-        "Majestätischer Löwe in der Savanne",
-        "Bunter Käfer auf einem Blatt",
+        `New Year vibes ✨🎆
+Bevor wir anstoßen, hab ich noch ein kleines Rätsel für euch 🧩
+
+👉 Addiere zu meiner Lieblingszahl das aktuelle Jahr
+👉 Teile das Ergebnis anschließend durch 64
+
+Na, wer kommt auf die Zahl? 
+
+Happy New Year, ihr Lieben! 💫`,
+        `Bonjour Paris 🇫🇷✨
+Zwischen Croissants, Lichtern und ganz viel Amour hab ich ein kleines Rätsel für euch 🧩
+
+👉 Quadriere meine Lieblingszahl
+👉 Ziehe danach das Doppelte meiner Lieblingszahl vom Ergebnis ab
+
+Na, wer rechnet schneller als ich beim Café-Bestellen? ☕
+Paris macht einfach alles ein bisschen magischer 💕✨`,
         `Heute ist mein Geburtstag! 🎉💫
 Und dieses Jahr ist etwas ganz Besonderes, denn ich bin endlich in dem Alter angekommen, das schon immer meine Lieblingszahl war.
 
 Kleines Rätsel für euch, bevor ich’s verrate:
 👉 „Die erste zweistellige Primzahl mit einer Quersumme von 5.`,
-        "Hase im Feld",
-        "Nashorn in freier Wildbahn",
-        "Winzige Mücke auf der Hand"
+        `Heute mal ganz bodenständig 🌱🐄
+Zwischen frischer Luft, glücklichen Tieren und ganz viel Natur hab ich ein kleines Rätsel für euch 🧩
+
+👉 Addiere zu meiner Lieblingszahl die nächst kleinere Primzahl
+
+Biohof-Vibes tun einfach der Seele gut 💚✨`,
+        `Bergluft, Weitblick & ganz viel Ruhe 🏔️✨
+Zwischen Gipfeln und Wanderpfaden hab ich ein kleines Rätsel für euch 🧩
+
+👉 Berechne 102 % meiner Lieblingszahl
+👉 Ziehe danach deine Jahrgangsstufe vom Ergebnis ab
+
+In den Bergen fühlt sich einfach alles ein bisschen klarer an 💚⛰️`,
+        `Back to school vibes 📚✨
+Zwischen neuen Heften, frischen Büchern und ganz viel Motivation hab ich ein kleines Rätsel für euch 🧩
+
+👉 3 Bücher und 2 Hefte kosten zusammen meine Lieblingszahl in Euro
+👉 Ein Buch kostet 3,50 € mehr als ein Heft
+
+Na, wer findet raus, wie teuer ein Heft ist? ✏️
+Neues Schuljahr, neue Chancen – let’s go! 💛📖`
     ];
 
     const liked = Array(bilder.length).fill(false);
@@ -260,5 +293,6 @@ Kleines Rätsel für euch, bevor ich’s verrate:
 
 </body>
 </html>
+
 
 
