--- a/index.html
+++ b/index.html
@@ -188,8 +188,8 @@ Let’s keep growing, creating & having fun together! 🚀💫`,
         `New Year vibes ✨🎆
 Bevor wir anstoßen, hab ich noch ein kleines Rätsel für euch 🧩
 
-👉 Addiere zu meiner Lieblingszahl das aktuelle Jahr
-👉 Teile das Ergebnis anschließend durch 64
+👉 Addiere zu meiner Lieblingszahl das aktuelle Jahr.
+👉 Teile das Ergebnis anschließend durch 64.
 
 Na, wer kommt auf die Zahl? 
 
@@ -197,8 +197,8 @@ Happy New Year, ihr Lieben! 💫`,
         `Bonjour Paris 🇫🇷✨
 Zwischen Croissants, Lichtern und ganz viel Amour hab ich ein kleines Rätsel für euch 🧩
 
-👉 Quadriere meine Lieblingszahl
-👉 Ziehe danach das Doppelte meiner Lieblingszahl vom Ergebnis ab
+👉 Quadriere meine Lieblingszahl.
+👉 Ziehe danach das Doppelte meiner Lieblingszahl vom Ergebnis ab.
 
 Na, wer rechnet schneller als ich beim Café-Bestellen? ☕
 Paris macht einfach alles ein bisschen magischer 💕✨`,
@@ -210,21 +210,21 @@ Kleines Rätsel für euch, bevor ich’s verrate:
         `Heute mal ganz bodenständig 🌱🐄
 Zwischen frischer Luft, glücklichen Tieren und ganz viel Natur hab ich ein kleines Rätsel für euch 🧩
 
-👉 Addiere zu meiner Lieblingszahl die nächst kleinere Primzahl
+👉 Addiere zu meiner Lieblingszahl die nächst kleinere Primzahl.
 
 Biohof-Vibes tun einfach der Seele gut 💚✨`,
         `Bergluft, Weitblick & ganz viel Ruhe 🏔️✨
 Zwischen Gipfeln und Wanderpfaden hab ich ein kleines Rätsel für euch 🧩
 
-👉 Berechne 102 % meiner Lieblingszahl
-👉 Ziehe danach deine Jahrgangsstufe vom Ergebnis ab
+👉 Berechne 102 % meiner Lieblingszahl.
+👉 Ziehe danach deine Jahrgangsstufe vom Ergebnis ab.
 
 In den Bergen fühlt sich einfach alles ein bisschen klarer an 💚⛰️`,
         `Back to school vibes 📚✨
 Zwischen neuen Heften, frischen Büchern und ganz viel Motivation hab ich ein kleines Rätsel für euch 🧩
 
-👉 3 Bücher und 2 Hefte kosten zusammen meine Lieblingszahl in Euro
-👉 Ein Buch kostet 3,50 € mehr als ein Heft
+👉 3 Bücher und 2 Hefte kosten zusammen meine Lieblingszahl in Euro.
+👉 Ein Buch kostet 3,50 € mehr als ein Heft.
 
 Na, wer findet raus, wie teuer ein Heft ist? ✏️
 Neues Schuljahr, neue Chancen – let’s go! 💛📖`
@@ -293,6 +293,7 @@ Neues Schuljahr, neue Chancen – let’s go! 💛📖`
 
 </body>
 </html>
+
 
 
 
