--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
         `Hey ihr Lieben 🌟
 Ich wollte einfach mal Danke sagen! 💛
 
-In den letzten Monaten ist so viel passiert – ich hätte niemals gedacht, dass ich mir auf den deutschen Social-Media-Kanälen so schnell einen Namen machen würde. Meine Mischung aus Lifestyle-Vibes, Reisetipps und kleinen kreativen Kurz-Clips war eigentlich nur ein Herzensprojekt… und jetzt sind wir schon über 4 Millionen auf Instagram 😭✨
+In den letzten Monaten ist so viel passiert – ich hätte niemals gedacht, dass ich mir auf den deutschen Social-Media-Kanälen so schnell einen Namen machen würde. Meine Mischung aus Lifestyle-Vibes, Reisetipps und kleinen kreativen Kurz-Clips war eigentlich nur ein Herzensprojekt… und jetzt sind wir schon üso viele auf Instagram 😭✨
 
 Ich bin so dankbar für jede einzelne Person hier. Danke fürs Lachen, fürs Mitfiebern, fürs Inspirieren und dafür, dass ihr meine Welt jeden Tag ein bisschen bunter macht. 💕🌈
 
@@ -293,6 +293,7 @@ Neues Schuljahr, neue Chancen – let’s go! 💛📖`
 
 </body>
 </html>
+
 
 
 
